--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,8 +1,9 @@
 xgboost_predictor @https://github.com/ANI717/XGBoost-MLOps-Pipeline/releases/download/v1.0.0/xgboost_predictor-1.0.0-py3-none-any.whl
 fastapi==0.116.0
+httpx==0.28.1
+Hypercorn==0.17.3
 pydantic-settings==2.10.1
 pytest==8.4.1
 pytest-cov==6.2.1
 pytest-env==1.1.5
 python-dotenv==1.1.1
-Hypercorn==0.17.3
