--- a/api/k8s/kustomization.yml
+++ b/api/k8s/kustomization.yml
@@ -4,6 +4,7 @@ kind: Kustomization
 namespace: mlops
 
 resources:
-  - deployment.yaml
-  - service.yaml
-  - ingress.yaml
+  - deployment.yml
+  - service.yml
+  - ingress.yml
+  - hpa.yml
