--- a/api/k8s/deployment.yml
+++ b/api/k8s/deployment.yml
@@ -28,3 +28,17 @@ spec:
             limits:
               cpu: "500m"
               memory: "1Gi"
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            failureThreshold: 3
